@@ -427,6 +427,7 @@
         <it.keystore.pass>storepass</it.keystore.pass>
         <it.keystore.file>${project.build.directory}${file.separator}pyrit.keystore</it.keystore.file>
         <it.wildfly.cli-batch>true</it.wildfly.cli-batch>
+        <it.skipserverstop>false</it.skipserverstop>
       </properties>
 
       <dependencies>
@@ -468,8 +469,9 @@
                 <it.keystore.file>${it.keystore.file}</it.keystore.file>
                 <it.keystore.alias>${it.keystore.alias}</it.keystore.alias>
                 <it.keystore.storepass>${it.keystore.pass}</it.keystore.storepass>
+                <it.skipserverstop>${it.skipserverstop}</it.skipserverstop>
               </systemPropertyVariables>
-              <argLine>-Xmx2G -XX:MaxPermSize=1G</argLine>
+              <argLine>-Xmx2G</argLine>
             </configuration>
             <executions>
               <execution>
@@ -622,7 +624,7 @@
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.5.0</version>
+            <version>1.6.4</version>
 						<configuration>
               <container>
                 <containerId>wildfly10x</containerId>
@@ -681,7 +683,7 @@
           <plugin>
             <groupId>org.wildfly.plugins</groupId>
             <artifactId>wildfly-maven-plugin</artifactId>
-            <version>1.0.2.Final</version>
+            <version>1.2.0.Final</version>
             <executions>
               <execution>
                 <id>deploy</id>
@@ -759,6 +761,7 @@
         <it.keystore.alias>pyrit</it.keystore.alias>
         <it.keystore.pass>storepass</it.keystore.pass>
         <it.keystore.file>${project.build.directory}${file.separator}pyrit.keystore</it.keystore.file>
+        <it.skipserverstop>${it.skipserverstop}</it.skipserverstop>
       </properties>
 
       <dependencies>
@@ -800,6 +803,7 @@
                 <it.keystore.file>${it.keystore.file}</it.keystore.file>
                 <it.keystore.alias>${it.keystore.alias}</it.keystore.alias>
                 <it.keystore.storepass>${it.keystore.pass}</it.keystore.storepass>
+                <it.skipserverstop>${it.skipserverstop}</it.skipserverstop>
               </systemPropertyVariables>
             </configuration>
             <executions>
@@ -953,7 +957,7 @@
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.5.0</version>
+            <version>1.6.4</version>
             <configuration>
               <container>
                 <containerId>wildfly10x</containerId>
@@ -975,7 +979,7 @@
                 <properties>
                   <cargo.servlet.port>${it.port.http}</cargo.servlet.port>
                   <cargo.jboss.configuration>standalone</cargo.jboss.configuration>
-                  <cargo.jvmargs>-Xms64m -Xmx1152m -XX:MaxPermSize=512m -XX:-UseSplitVerifier</cargo.jvmargs>
+                  <cargo.jvmargs>-Xms64m -Xmx2048m -XX:-UseSplitVerifier</cargo.jvmargs>
                   <cargo.datasource.datasource.pyrit>
                     cargo.datasource.driver=${it.jdbc.driver}|
                     cargo.datasource.url=${it.jdbc.url}|
